--- a/Github.ipynb
+++ b/Github.ipynb
@@ -2,9 +2,147 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reinicializado el repositorio Git existente en /home/juan/Descargas/Github/.git/\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1542, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-2-406324b95507>\", line 45, in prepareButton\n",
+      "    print subprocess.check_output('git remote add origin https://github.com/Clasedeprogramacion/prueba.git', shell=True)\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/subprocess.py\", line 219, in check_output\n",
+      "    raise CalledProcessError(retcode, cmd, output=output)\n",
+      "CalledProcessError: Command 'git remote add origin https://github.com/Clasedeprogramacion/prueba.git' returned non-zero exit status 128\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reinicializado el repositorio Git existente en /home/juan/Descargas/Github/.git/\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "[master 1022b21] PruebaLinux\n",
+      " 1 file changed, 99 insertions(+), 2 deletions(-)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1542, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-2-406324b95507>\", line 55, in BeginButton\n",
+      "    print subprocess.check_output('git push -f origin master', shell=True)  # sube los archivos a github\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/subprocess.py\", line 219, in check_output\n",
+      "    raise CalledProcessError(retcode, cmd, output=output)\n",
+      "CalledProcessError: Command 'git push -f origin master' returned non-zero exit status 128\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Reinicializado el repositorio Git existente en /home/juan/Descargas/Github/.git/\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1542, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-2-406324b95507>\", line 54, in BeginButton\n",
+      "    print subprocess.check_output(commit, shell=True)  # agrega comentario\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/subprocess.py\", line 219, in check_output\n",
+      "    raise CalledProcessError(retcode, cmd, output=output)\n",
+      "CalledProcessError: Command 'git commit -m PruebaLinux' returned non-zero exit status 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reinicializado el repositorio Git existente en /home/juan/Descargas/Github/.git/\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1542, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-2-406324b95507>\", line 45, in prepareButton\n",
+      "    print subprocess.check_output('git remote add origin https://github.com/Clasedeprogramacion/prueba.git', shell=True)\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/subprocess.py\", line 219, in check_output\n",
+      "    raise CalledProcessError(retcode, cmd, output=output)\n",
+      "CalledProcessError: Command 'git remote add origin https://github.com/Clasedeprogramacion/prueba.git' returned non-zero exit status 128\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/lib-tk/Tkinter.py\", line 1542, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-2-406324b95507>\", line 58, in clearData\n",
+      "    print subprocess.check_output('git remote rm origin', shell=True)\n",
+      "  File \"/home/juan/anaconda2/lib/python2.7/subprocess.py\", line 219, in check_output\n",
+      "    raise CalledProcessError(retcode, cmd, output=output)\n",
+      "CalledProcessError: Command 'git remote rm origin' returned non-zero exit status 128\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Widgets instance at 0x7ff77365fa70>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from Tkinter import *\n",
     "import subprocess  # permite usar la terminal del sistema operativo desde python\n",
